--- a/src/main/resources/fxml/RentalTableView.fxml
+++ b/src/main/resources/fxml/RentalTableView.fxml
@@ -3,59 +3,62 @@
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.*?>
 <?import java.util.HashMap?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="de.htwsaar.prog3.carrental.controller.RentalTableViewController"
-            onKeyPressed="#handleKeyEvent">
+            onKeyPressed="#handleKeyEvent"
+            stylesheets="@styles.css">
+    <fx:define>
+        <HashMap fx:id="searchComboBoxFieldStrings"
+                 id="%rental-id-label"
+                 car="%rental-car-label"
+                 customer="%rental-customer-label"
+                 employee="%rental-employee-label"
+                 begin="%rental-begin-label"
+                 end="%rental-end-label"
+                 extraCosts="%rental-extra-costs-label"
+                 note="%rental-note-label"/>
+    </fx:define>
+    <fx:define>
+        <HashMap fx:id="searchComboBoxComparatorStrings"
+                 equals="%search-combobox-equals"
+                 greater="%search-combobox-greater"
+                 smaller="%search-combobox-smaller"
+                 like="%search-combobox-like"/>
+    </fx:define>
     <top>
-        <GridPane BorderPane.alignment="CENTER">
+        <GridPane>
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints prefWidth="100.0" hgrow="ALWAYS"/>
+                <ColumnConstraints prefWidth="100.0" hgrow="ALWAYS"/>
+                <ColumnConstraints prefWidth="100.0" hgrow="ALWAYS"/>
+                <ColumnConstraints prefWidth="100.0" hgrow="ALWAYS"/>
+                <ColumnConstraints prefWidth="100.0" hgrow="ALWAYS"/>
             </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            </rowConstraints>
-            <MenuBar prefHeight="10.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.rowIndex="0">
-                <padding>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                </padding>
+            <!-- Row 0 -->
+            <MenuBar GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="5">
                 <Menu text="%menubar-view-file">
-                    <MenuItem mnemonicParsing="false" text="%menubar-operation-cars" onAction="#handleCarMenuItemClicked"/>
-                    <MenuItem mnemonicParsing="false" text="%menubar-operation-customers" onAction="#handleCustomerMenuItemClicked"/>
-                    <MenuItem mnemonicParsing="false" text="%menubar-operation-employees" onAction="#handleEmployeeMenuItemClicked"/>
-                    <MenuItem mnemonicParsing="false" text="%menubar-operation-rentals" onAction="#handleRentalMenuItemClicked"/>
-                    <SeparatorMenuItem mnemonicParsing="false"/>
-                    <MenuItem mnemonicParsing="false" text="%menubar-operation-close" onAction="#handleCloseMenuItemClicked"/>
+                    <MenuItem text="%menubar-operation-cars" onAction="#handleCarMenuItemClicked"/>
+                    <MenuItem text="%menubar-operation-customers" onAction="#handleCustomerMenuItemClicked"/>
+                    <MenuItem text="%menubar-operation-employees" onAction="#handleEmployeeMenuItemClicked"/>
+                    <MenuItem text="%menubar-operation-rentals" onAction="#handleRentalMenuItemClicked"/>
+                    <SeparatorMenuItem/>
+                    <MenuItem text="%menubar-operation-close" onAction="#handleCloseMenuItemClicked"/>
                 </Menu>
                 <Menu text="%menubar-view-edit">
-                    <MenuItem mnemonicParsing="false" text="%menubar-operation-edit" onAction="#handleEditClicked"/>
-                    <MenuItem mnemonicParsing="false" text="%menubar-operation-delete" onAction="#handleDeleteClicked"/>
+                    <MenuItem text="%menubar-operation-edit" onAction="#handleEditClicked"/>
+                    <MenuItem text="%menubar-operation-delete" onAction="#handleDeleteClicked"/>
                 </Menu>
                 <Menu text="%menubar-view-help">
-                    <MenuItem mnemonicParsing="false" text="%menubar-operation-about" onAction="#handleAboutMenuItemClicked"/>
+                    <MenuItem text="%menubar-operation-about" onAction="#handleAboutMenuItemClicked"/>
                 </Menu>
             </MenuBar>
-            <fx:define>
-                <HashMap fx:id="searchComboBoxFieldStrings"
-                         id="%rental-id-label"
-                         car="%rental-car-label"
-                         customer="%rental-customer-label"
-                         employee="%rental-employee-label"
-                         begin="%rental-begin-label"
-                         end="%rental-end-label"
-                         extraCosts="%rental-extra-costs-label"
-                         note="%rental-note-label"/>
-            </fx:define>
-            <ComboBox fx:id="searchComboBoxField" GridPane.rowIndex="1" GridPane.columnIndex="0"
-                      promptText="%search-combobox-field-text" prefWidth="Infinity" GridPane.halignment="CENTER"
-                      GridPane.valignment="CENTER">
+            <!-- Row 1 -->
+            <ComboBox fx:id="searchAttributeComboBox" GridPane.rowIndex="1" GridPane.columnIndex="0" maxWidth="Infinity"
+                      promptText="%search-combobox-field-text">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
                         <fx:reference source="searchComboBoxFieldStrings.id"/>
@@ -69,16 +72,8 @@
                     </FXCollections>
                 </items>
             </ComboBox>
-            <fx:define>
-                <HashMap fx:id="searchComboBoxComparatorStrings"
-                         equals="%search-combobox-equals"
-                         greater="%search-combobox-greater"
-                         smaller="%search-combobox-smaller"
-                         like="%search-combobox-like"/>
-            </fx:define>
-            <ComboBox fx:id="searchComboBoxComparator" GridPane.rowIndex="1" GridPane.columnIndex="1"
-                      promptText="%search-combobox-comparator-text" prefWidth="Infinity" GridPane.halignment="CENTER"
-                      GridPane.valignment="CENTER">
+            <ComboBox fx:id="searchOperatorComboBox" GridPane.rowIndex="1" GridPane.columnIndex="1" maxWidth="Infinity"
+                      promptText="%search-combobox-comparator-text">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
                         <fx:reference source="searchComboBoxComparatorStrings.equals"/>
@@ -88,27 +83,57 @@
                     </FXCollections>
                 </items>
             </ComboBox>
-            <TextField fx:id="searchTextField" GridPane.rowIndex="1" GridPane.columnIndex="2"
-                       promptText="%search-textfield-text" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
-            <Button mnemonicParsing="false" onAction="#handleApplyCurrentFilterButtonClicked"
-                    text="%button-search-label" textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="3"
-                    prefWidth="Infinity" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
-            <Button mnemonicParsing="false" onAction="#handleRemoveCurrentFilterButtonClicked"
-                    text="%button-clear-filter-label" textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="4"
-                    prefWidth="Infinity" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+            <TextField fx:id="searchValueTextField" GridPane.rowIndex="1" GridPane.columnIndex="2" maxWidth="Infinity"
+                       promptText="%search-textfield-text"/>
+            <Button GridPane.rowIndex="1" GridPane.columnIndex="3" maxWidth="Infinity"
+                    text="%button-search-label" onAction="#handleSearchButtonClicked"/>
+            <Button GridPane.rowIndex="1" GridPane.columnIndex="4" maxWidth="Infinity"
+                    text="%button-clear-filter-label" onAction="#handleClearFilterButtonClicked"/>
         </GridPane>
     </top>
     <center>
-        <TableView fx:id="rentalTableView" prefHeight="400.0" prefWidth="487.0" BorderPane.alignment="CENTER">
+        <TableView fx:id="entityTable">
             <columns>
-                <TableColumn fx:id="id" text="%rental-id-label"/>
-                <TableColumn fx:id="car" text="%rental-car-label"/>
-                <TableColumn fx:id="customer" text="%rental-customer-label"/>
-                <TableColumn fx:id="employee" text="%rental-employee-label"/>
-                <TableColumn fx:id="begin" text="%rental-begin-label"/>
-                <TableColumn fx:id="end" text="%rental-end-label"/>
-                <TableColumn fx:id="extraCosts" text="%rental-extra-costs-label"/>
-                <TableColumn fx:id="note" text="%rental-note-label"/>
+                <TableColumn text="%rental-id-label">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="id"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="%rental-car-label">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="car"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="%rental-customer-label">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="customer"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="%rental-employee-label">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="employee"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="%rental-begin-label">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="begin"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="%rental-end-label">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="end"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="%rental-extra-costs-label">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="extraCosts"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="%rental-note-label">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="note"/>
+                    </cellValueFactory>
+                </TableColumn>
             </columns>
             <contextMenu>
                 <ContextMenu>
@@ -121,20 +146,19 @@
         </TableView>
     </center>
     <bottom>
-        <GridPane BorderPane.alignment="CENTER" prefHeight="25.0" prefWidth="1442.0">
+        <GridPane>
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
+                <ColumnConstraints prefWidth="100.0" hgrow="ALWAYS" halignment="CENTER"/>
+                <ColumnConstraints prefWidth="100.0" hgrow="ALWAYS" halignment="CENTER"/>
             </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            </rowConstraints>
-            <Button mnemonicParsing="false" onAction="#handleEditClicked" text="%button-edit-label"
-                    textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"
-                    GridPane.valignment="CENTER"/>
-            <Button mnemonicParsing="false" onAction="#handleDeleteClicked" text="%button-delete-label"
-                    textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
-                    GridPane.valignment="CENTER"/>
+            <padding>
+                <Insets top="5.0" right="5.0" bottom="5.0" left="5.0"/>
+            </padding>
+            <!-- Row 0 -->
+            <Button GridPane.rowIndex="0" GridPane.columnIndex="0"
+                    text="%button-edit-label" onAction="#handleEditClicked"/>
+            <Button GridPane.rowIndex="0" GridPane.columnIndex="1"
+                    text="%button-delete-label" onAction="#handleDeleteClicked"/>
         </GridPane>
     </bottom>
 </BorderPane>
